Fixed summary text overlapping action buttons

--- a/condensedinlinepanel/static/condensedinlinepanel/condensedinlinepanel.scss
+++ b/condensedinlinepanel/static/condensedinlinepanel/condensedinlinepanel.scss
@@ -42,6 +42,8 @@ $color-red: #CD3238;
         > h2 {
             margin: 0;
             line-height: 50px;
+            text-overflow: ellipsis;
+            width: calc(100% - 100px);
         }
     }
 
@@ -141,7 +143,9 @@ $color-red: #CD3238;
         width: 250px;
         line-height: 50px;
         text-align: right;
+        padding-left: 1em;
         padding-right: 1em;
+        background-color: #fafafa;
     }
 
     &__action-close {
